feat: 팔로우 등록, 정산 API 분리